# thorvg

inc/: thorvg.h
src/examples/: meson.build
src/loaders/: meson.build
src/loaders/lottie/: meson.build  tvgLottieLoader.cpp  tvgLottieLoader.h
src/loaders/lottie/lottieanimation/: lottieitem.cpp  lottieitem.h  lottieitem_capi.cpp  lottiekeypath.h  lottiemodel.cpp  lottiemodel.h
src/loaders/lottie/lottieanimation/vector/: varenaalloc.cpp  vbezier.cpp  vbezier.h  vbitmap.cpp  vbitmap.h  vbrush.cpp  vbrush.h  vdasher.cpp  vdasher.h  vdebug.cpp  vdrawable.cpp  vdrawable.h  vdrawhelper.cpp  vdrawhelper.h  vdrawhelper_common.cpp  vdrawhelper_neon.cpp  vdrawhelper_sse2.cpp  velapsedtimer.cpp  velapsedtimer.h  vglobal.h  vimageloader.cpp  vimageloader.h  vinterpolator.cpp  vinterpolator.h  vline.h  vmatrix.cpp  vmatrix.h  vpainter.cpp  vpainter.h  vpath.cpp  vpath.h  vpathmesure.cpp  vpathmesure.h  vpoint.h  vraster.cpp  vraster.h  vrect.cpp  vrect.h  vrle.cpp  vrle.h
src/loaders/svg/: tvgSvgLoader.cpp  tvgSvgSceneBuilder.cpp
